--- a/src/NativeBOINC/res/layout/install_activity.xml
+++ b/src/NativeBOINC/res/layout/install_activity.xml
@@ -111,6 +111,7 @@
 	  	android:layout_height="wrap_content"
 		android:orientation="vertical">
 		<TextView
+			android:id="@+id/installFinishText"
 			android:layout_width="fill_parent"
 	  		android:layout_height="wrap_content"
 	  		android:textSize="14dip"
