--- a/src/NativeBOINC/res/xml/preferences.xml
+++ b/src/NativeBOINC/res/xml/preferences.xml
@@ -89,6 +89,11 @@
 			android:title="@string/prefAboutTitle"
 			android:persistent="false" />
 		<Preference
+			android:key="installedBinaries"
+			android:title="@string/prefBinariesInfoTitle"
+			android:summary="@string/prefBinariesInfoSummary"
+			android:persistent="false" />
+		<Preference
 			android:key="changeLog"
 			android:title="@string/changelog"
 			android:summary="@string/prefChangelogSummary"
