--- a/src/NativeBOINC/res/layout/add_project.xml
+++ b/src/NativeBOINC/res/layout/add_project.xml
@@ -123,6 +123,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="10dip"
+			android:paddingLeft="20dip"
+			android:paddingRight="20dip"
 			android:text="@string/ok" />
 	</LinearLayout>
 </LinearLayout>
