--- a/src/NativeBOINC/res/values/arrays.xml
+++ b/src/NativeBOINC/res/values/arrays.xml
@@ -95,4 +95,8 @@
 		<item>Waiting to run</item>  <!-- 9 PROCESS_SUSPENDED (we've sent it a "suspend" message)        -->
 	</string-array>
 
+	<string-array name="PGPkeyservers">
+		<item>keyserver.stack.nl</item>
+		<item>subkeys.pgp.net</item>
+	</string-array>
 </resources>
