Update nativeboinc to version 0.2alpha

--- a/src/NativeBOINC/res/layout/screen_lock.xml
+++ b/src/NativeBOINC/res/layout/screen_lock.xml
@@ -23,6 +23,16 @@
 	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
+  	<TextView
+  		android:id="@+id/screenLockBarText"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:gravity="right"
+		android:textStyle="bold"
+		android:paddingRight="5dip"
+		android:background="@color/screenLockBar"
+		android:textColor="@color/screenLockBarText"
+		android:text="Battery: 99%, 13:30:30" />
   	<ImageView
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
