--- a/src/NativeBOINC/res/xml/preferences.xml
+++ b/src/NativeBOINC/res/xml/preferences.xml
@@ -43,6 +43,29 @@
 			android:defaultValue="false"
 			android:persistent="true" />
 	</PreferenceCategory>
+	<PreferenceCategory android:title="@string/prefCategoryNativeBoinc">
+		<CheckBoxPreference 
+			android:key="powerSaving"
+			android:title="@string/prefPowerSaving"
+			android:summaryOff="@string/prefPowerSavingOnDisabled"
+			android:summaryOn="@string/prefPowerSavingOnEnabled"
+			android:defaultValue="false"
+			android:persistent="true" />
+		<ListPreference 
+			android:key="screenLockUpdateInterval"
+			android:title="@string/prefScreenLockUpdateInterval"
+			android:entries="@array/prefScreenLockUpdateValues"
+			android:entryValues="@array/prefScreenLockUpdateValues"
+			android:defaultValue="10"
+			android:persistent="true" />
+		<ListPreference 
+			android:key="widgetUpdateInterval"
+			android:title="@string/prefWidgetUpdateInterval"
+			android:entries="@array/prefWidgetUpdateValues"
+			android:entryValues="@array/prefWidgetUpdateValues"
+			android:defaultValue="10"
+			android:persistent="true" />
+	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/prefCategoryNetworkBW">
 		<ListPreference
 			android:key="autoUpdateIntervalWiFi"
@@ -50,7 +73,7 @@
 			android:summary="@string/disabled"
 			android:entryValues="@array/prefAutoUpdatesValues"
 			android:entries="@array/prefAutoUpdatesDisplay"
-			android:defaultValue="60"
+			android:defaultValue="10"
 			android:persistent="true" />
 		<ListPreference
 			android:key="autoUpdateIntervalMobile"
@@ -58,7 +81,7 @@
 			android:summary="@string/disabled"
 			android:entryValues="@array/prefAutoUpdatesValues"
 			android:entries="@array/prefAutoUpdatesDisplay"
-			android:defaultValue="60"
+			android:defaultValue="10"
 			android:persistent="true" />
 		<ListPreference
 			android:key="autoUpdateIntervalLocalhost"
@@ -66,7 +89,7 @@
 			android:summary="@string/disabled"
 			android:entryValues="@array/prefAutoUpdatesValues"
 			android:entries="@array/prefAutoUpdatesDisplay"
-			android:defaultValue="60"
+			android:defaultValue="10"
 			android:persistent="true" />
 		<CheckBoxPreference
 			android:key="limitMessages"
