Update NativeBOINC to 0.2.5.1alpha.

--- a/src/NativeBOINC/res/layout/widget.xml
+++ b/src/NativeBOINC/res/layout/widget.xml
@@ -26,37 +26,39 @@
 	android:background="@drawable/widget_bg">
 	<LinearLayout
 		android:orientation="horizontal"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
+		android:layout_gravity="center_horizontal"
 		android:layout_height="wrap_content"
 		android:paddingBottom="3dip">
 		<Button
 			android:id="@+id/widgetStart" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:drawablePadding="0dip"
 			android:width="50dip"
 			android:height="40dip"
-			android:drawableLeft="@android:drawable/ic_media_play" />
+			android:drawableTop="@android:drawable/ic_media_play" />
 		<Button
 			android:id="@+id/widgetStop" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:width="50dip"
 			android:height="40dip"
-			android:drawableLeft="@android:drawable/ic_media_pause" />
+			android:drawableTop="@android:drawable/ic_media_pause" />
 		<Button
 			android:id="@+id/widgetManager" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:width="50dip"
 			android:height="40dip"
-			android:drawableLeft="@drawable/manager_icon" />
+			android:drawableTop="@drawable/manager_icon" />
 		<Button
 			android:id="@+id/widgetLock" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:width="50dip"
 			android:height="40dip"
-			android:drawableLeft="@android:drawable/ic_lock_lock" />
+			android:drawableTop="@android:drawable/ic_lock_lock" />
 	</LinearLayout>
 	<RelativeLayout	android:id="@+id/widgetProgress"
 		android:layout_width="fill_parent"
