Fix stupid bug in boinc client (get_battery_level). Update NativeBoinc.

--- a/src/NativeBOINC/res/layout/access_password.xml
+++ b/src/NativeBOINC/res/layout/access_password.xml
@@ -29,7 +29,7 @@
 			android:layout_width="fill_parent"
 	  		android:layout_height="wrap_content"
 	  		android:textSize="14dip"
-	  		android:text="@string/installCurrentPassword" />
+	  		android:text="xxxx" />
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
-			android:text="@string/installNewPassword"
+			android:text="xxxx"
 			android:paddingRight="5dip" />
 		<EditText
 			android:id="@+id/accessPassword"
