--- a/src/NativeBOINC/res/layout/local_prefs.xml
+++ b/src/NativeBOINC/res/layout/local_prefs.xml
@@ -19,43 +19,14 @@
  * 
  */
  -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
-  	<LinearLayout android:orientation="horizontal"
-  		android:id="@+id/localPrefButtons"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_alignParentBottom="true"
-		android:paddingTop="10dip"
-		android:paddingLeft="10dip"
-		android:paddingRight="10dip" >
-		<Button
-			android:id="@+id/localPrefCancel" 
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/cancel" />
-		<Button
-			android:id="@+id/localPrefDefault" 
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="10dip"
-			android:text="@string/applyDefault" />
-		<Button
-			android:id="@+id/localPrefApply" 
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="10dip"
-			android:paddingLeft="10dip"
-			android:paddingRight="10dip"
-			android:text="@string/apply" />
-    </LinearLayout>
   	<ScrollView
   		android:layout_width="fill_parent"
-  		android:layout_height="fill_parent"
-  		android:layout_above="@id/localPrefButtons">
+  		android:layout_height="wrap_content"
+  		android:layout_weight="1">
   		<LinearLayout
 		  	android:orientation="vertical"
 		  	android:layout_width="fill_parent"
@@ -503,4 +474,32 @@
 		  	</LinearLayout>
 		</LinearLayout>
 	</ScrollView>
-</RelativeLayout>
+	<LinearLayout android:orientation="horizontal"
+  		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="10dip"
+		android:paddingLeft="10dip"
+		android:paddingRight="10dip"
+		android:layout_gravity="right"
+		android:layout_weight="0" >
+		<Button
+			android:id="@+id/localPrefCancel" 
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/cancel" />
+		<Button
+			android:id="@+id/localPrefDefault" 
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="10dip"
+			android:text="@string/applyDefault" />
+		<Button
+			android:id="@+id/localPrefApply" 
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="10dip"
+			android:paddingLeft="10dip"
+			android:paddingRight="10dip"
+			android:text="@string/apply" />
+    </LinearLayout>
+</LinearLayout>
