--- a/src/NativeBOINC/res/layout/update.xml
+++ b/src/NativeBOINC/res/layout/update.xml
@@ -19,7 +19,7 @@
  * 
  */
  -->
-<RelativeLayout
+<LinearLayout
   	xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
@@ -31,13 +31,23 @@
     	android:layout_height="wrap_content"
     	android:text="@string/updateNoNew"
     	android:textSize="16dip"
-    	android:textStyle="bold" />
+    	android:textStyle="bold"
+    	android:layout_weight="0" />
+    <ListView
+    	android:id="@+id/updateBinariesList"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:layout_weight="1"
+    	android:paddingTop="5dip"
+    	android:paddingBottom="5dip" />
     <LinearLayout android:orientation="horizontal"
-    	android:id="@+id/updateButtons"
-		android:layout_width="wrap_content"
+  		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_alignParentBottom="true">
+		android:paddingTop="10dip"
+		android:paddingLeft="10dip"
+		android:paddingRight="10dip"
+		android:layout_gravity="right"
+		android:layout_weight="0">
 		<Button
 			android:id="@+id/updateCancel" 
 			android:layout_width="wrap_content"
@@ -52,12 +62,4 @@
 			android:paddingRight="20dip"
 			android:text="@string/ok" />
     </LinearLayout>
-    <ListView
-    	android:id="@+id/updateBinariesList"
-    	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
-    	android:paddingTop="5dip"
-    	android:paddingBottom="5dip"
-    	android:layout_below="@id/updateAvailableText"
-    	android:layout_above="@id/updateButtons" />
-</RelativeLayout>
+</LinearLayout>
