New installer. Improve error handling.

--- a/src/NativeBOINC/res/layout/install_step1.xml
+++ b/src/NativeBOINC/res/layout/install_step1.xml
@@ -100,6 +100,7 @@
 			android:layout_height="wrap_content"
 			android:text="@string/cancel" />
 		<Button android:id="@+id/installNext" 
+		    android:enabled="false"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/next" />
