--- a/src/NativeBOINC/res/layout/progress_list_item.xml
+++ b/src/NativeBOINC/res/layout/progress_list_item.xml
@@ -28,6 +28,8 @@
     <TextView android:id="@+id/progressInfo"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
+    	android:layout_alignParentLeft="true"
+    	android:layout_toLeftOf="@+id/progressCancel"
     	android:text="Simple progress"
     	android:paddingBottom="5dip" />
     <Button android:id="@+id/progressCancel"
