--- a/src/NativeBOINC/res/values/arrays.xml
+++ b/src/NativeBOINC/res/values/arrays.xml
@@ -112,9 +112,9 @@
 	</string-array>
 
 	<string-array name="PGPkeyservers">
-		<!-- <item>keyserver.stack.nl</item>-->
+	    <item>keyserver.stack.nl</item>
+	    <item>subkeys.pgp.net</item>
 		<item>pgp.zdv.uni-mainz.de</item>
-		<item>subkeys.pgp.net</item>
 	</string-array>
 	
 	<string-array name="pollOps">
