--- a/src/NativeBOINC/res/xml/preferences.xml
+++ b/src/NativeBOINC/res/xml/preferences.xml
@@ -42,6 +42,13 @@
 			android:summaryOn="@string/prefAutoConnectEnabled"
 			android:defaultValue="false"
 			android:persistent="true" />
+		<ListPreference 
+		    android:key="viewItemType"
+		    android:title="@string/prefViewItemTypeTitle"
+		    android:entries="@array/prefViewItemTypes"
+		    android:entryValues="@array/prefViewItemTypeValues"
+		    android:defaultValue="0"
+		    android:persistent="true" />
 	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/prefCategoryNativeBoinc">
 		<CheckBoxPreference 
@@ -64,6 +71,13 @@
 			android:entries="@array/prefWidgetUpdateValues"
 			android:entryValues="@array/prefWidgetUpdateValues"
 			android:defaultValue="10"
+			android:persistent="true" />
+		<ListPreference
+		    android:key="newsUpdatePeriod"
+		    android:title="@string/prefNewsUpdatePeriodTitle"
+		    android:entries="@array/newsUpdatePeriods"
+		    android:entryValues="@array/newsUpdatePeriodValues"
+		    android:defaultValue="12"
 			android:persistent="true" />
 	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/prefCategoryNetworkBW">
