--- a/src/NativeBOINC/res/layout/install_finish.xml
+++ b/src/NativeBOINC/res/layout/install_finish.xml
@@ -23,7 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
 	android:padding="10dip">
     <TextView
 		android:id="@+id/installFinishText"
