--- a/src/NativeBOINC/res/layout/install_step2.xml
+++ b/src/NativeBOINC/res/layout/install_step2.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
     <ScrollView
         android:layout_width="fill_parent"
