--- a/src/NativeBOINC/res/values/arrays.xml
+++ b/src/NativeBOINC/res/values/arrays.xml
@@ -111,6 +111,33 @@
 		<item>Waiting to run</item>  <!-- 9 PROCESS_SUSPENDED (we've sent it a "suspend" message)        -->
 	</string-array>
 
+	<!-- news update periods -->
+	<string-array name="newsUpdatePeriods">
+	    <item>12 hour</item>
+	    <item>1 day</item>
+	    <item>2 days</item>
+	    <item>4 days</item>
+	    <item>1 week</item>
+	</string-array>
+	<string-array name="newsUpdatePeriodValues">
+	    <item>12</item>
+	    <item>24</item>
+	    <item>48</item>
+	    <item>96</item>
+	    <item>168</item>
+	</string-array>
+	
+	<string-array name="prefViewItemTypes">
+	    <item>Standard</item>
+	    <item>Checkable</item>
+	    <item>Expandable</item>
+	</string-array>
+	<string-array name="prefViewItemTypeValues">
+	    <item>0</item>
+	    <item>1</item>
+	    <item>2</item>
+	</string-array>
+	
 	<string-array name="PGPkeyservers">
 	    <item>keyserver.stack.nl</item>
 	    <item>subkeys.pgp.net</item>
