--- a/src/NativeBOINC/res/layout-land/projects_list_item.xml
+++ b/src/NativeBOINC/res/layout-land/projects_list_item.xml
@@ -19,89 +19,99 @@
  * 
  */
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="horizontal"
 	android:paddingTop="2dip"
 	android:paddingBottom="2dip"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:minHeight="?android:attr/listPreferredItemHeight">
 
-	<!-- ProgressBar showing the resource share. Workaround to support color switching is used. -->
-	<RelativeLayout	android:id="@+id/projectShare"
-		android:layout_marginTop="12dip"
-		android:layout_marginRight="6dip"
-		android:layout_width="100dip"
+    <CheckBox 
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true">
-		<ProgressBar
-			android:id="@+id/projectShareActive"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
+		android:focusable="false" />
+    <RelativeLayout
+		android:layout_width="0dip"
+		android:layout_weight="1"
+		android:layout_height="wrap_content">
+		<!-- ProgressBar showing the resource share. Workaround to support color switching is used. -->
+		<RelativeLayout	android:id="@+id/projectShare"
+			android:layout_marginTop="12dip"
+			android:layout_marginRight="6dip"
+			android:layout_width="100dip"
 			android:layout_height="wrap_content"
-			android:layout_alignParentTop="true"
-			android:progressDrawable="@drawable/progress_green"
-			android:visibility="invisible"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
-		<ProgressBar
-			android:id="@+id/projectShareSuspended"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentTop="true"
-			android:progressDrawable="@drawable/progress_red"
-			android:visibility="gone"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
-		<ProgressBar
-			android:id="@+id/projectShareNNW"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentTop="true"
-			android:progressDrawable="@drawable/progress_yellow"
-			android:visibility="gone"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
+			android:layout_alignParentRight="true">
+			<ProgressBar
+				android:id="@+id/projectShareActive"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentTop="true"
+				android:progressDrawable="@drawable/progress_green"
+				android:visibility="invisible"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<ProgressBar
+				android:id="@+id/projectShareSuspended"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentTop="true"
+				android:progressDrawable="@drawable/progress_red"
+				android:visibility="gone"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<ProgressBar
+				android:id="@+id/projectShareNNW"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentTop="true"
+				android:progressDrawable="@drawable/progress_yellow"
+				android:visibility="gone"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<TextView
+				android:id="@+id/projectShareText"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentTop="true"
+				android:layout_centerInParent="true"
+				android:lines="1"
+				android:text="500 (100.00%)"
+				android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+		</RelativeLayout>
+	
+		<!-- Project name -->
 		<TextView
-			android:id="@+id/projectShareText"
+			android:id="@+id/projectName"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_marginLeft="6dip"
+			android:layout_marginTop="6dip"
+			android:layout_toLeftOf="@+id/projectShare"
 			android:layout_alignParentTop="true"
-			android:layout_centerInParent="true"
+			android:layout_alignParentLeft="true"
 			android:lines="1"
-			android:text="500 (100.00%)"
-			android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+			android:text="ProjectX@Home"
+			android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+		<!-- Project details -->
+		<TextView
+			android:id="@+id/projectDetails"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/projectName"
+			android:layout_marginTop="3dip"
+			android:layout_alignLeft="@+id/projectName"
+			android:gravity="left"
+			android:lines="1"
+			android:text="Total:10000000.00 RAC:10000.00 Host:5000000.00 hRAC:5000.00"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
 	</RelativeLayout>
-
-	<!-- Project name -->
-	<TextView
-		android:id="@+id/projectName"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginLeft="6dip"
-		android:layout_marginTop="6dip"
-		android:layout_toLeftOf="@+id/projectShare"
-		android:layout_alignParentTop="true"
-		android:layout_alignParentLeft="true"
-		android:lines="1"
-		android:text="ProjectX@Home"
-		android:textAppearance="?android:attr/textAppearanceLarge" />
-
-	<!-- Project details -->
-	<TextView
-		android:id="@+id/projectDetails"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/projectName"
-		android:layout_marginTop="3dip"
-		android:layout_alignLeft="@+id/projectName"
-		android:gravity="left"
-		android:lines="1"
-		android:text="Total:10000000.00 RAC:10000.00 Host:5000000.00 hRAC:5000.00"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
-</RelativeLayout>
+</LinearLayout>
