--- a/src/NativeBOINC/res/layout-land/transfers_list_item.xml
+++ b/src/NativeBOINC/res/layout-land/transfers_list_item.xml
@@ -19,126 +19,137 @@
  * 
  */
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:paddingTop="2dip"
 	android:paddingBottom="2dip"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
+	android:orientation="horizontal"
 	android:minHeight="?android:attr/listPreferredItemHeight">
 
+    <CheckBox 
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:focusable="false" />
 	<!-- Transfer size -->
-	<TextView
-		android:id="@+id/transferSize"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_marginRight="6dip"
-		android:layout_marginTop="8dip"
-		android:lines="1"
-		android:text="56.2 KB / 126.6 KB"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	<!-- File name -->
-	<TextView
-		android:id="@+id/transferFileName"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_toLeftOf="@+id/transferSize"
-		android:layout_marginLeft="6dip"
-		android:layout_marginRight="6dip"
-		android:layout_marginTop="6dip"
-		android:layout_alignParentLeft="true"
-		android:lines="1"
-		android:text="File A"
-		android:textAppearance="?android:attr/textAppearanceMedium" />
-
-	<!-- Speed -->
-	<TextView
-		android:id="@+id/transferSpeed"
-		android:layout_width="75dip"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/transferFileName"
-		android:layout_alignRight="@+id/transferSize"
-		android:layout_marginTop="3dip"
-		android:layout_marginLeft="3dip"
-		android:gravity="right"
-		android:lines="1"
-		android:text="123.4 KB/s"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	<!-- Progress indicator -->
-	<RelativeLayout	android:id="@+id/transferProgress"
-		android:layout_width="140dip"
-		android:layout_height="wrap_content"
-		android:layout_toLeftOf="@+id/transferSpeed"
-		android:layout_below="@+id/transferFileName"
-		android:layout_marginTop="3dip"
-		android:layout_centerHorizontal="true">
-		<ProgressBar
-			android:id="@+id/transferProgressRunning"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:progressDrawable="@drawable/progress_green"
-			android:visibility="invisible"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
-		<ProgressBar
-			android:id="@+id/transferProgressSuspended"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:progressDrawable="@drawable/progress_red"
-			android:visibility="gone"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
-		<ProgressBar
-			android:id="@+id/transferProgressWaiting"
-			style="?android:attr/progressBarStyleHorizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:progressDrawable="@drawable/progress_yellow"
-			android:visibility="gone"
-			android:max="1000"
-			android:progress="10"
-			android:secondaryProgress="1000" />
+	<RelativeLayout
+		android:layout_width="0dip"
+		android:layout_weight="1"
+		android:layout_height="wrap_content">
 		<TextView
-			android:id="@+id/transferProgressText"
+			android:id="@+id/transferSize"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignParentTop="true"
-			android:layout_centerInParent="true"
+			android:layout_alignParentRight="true"
+			android:layout_marginRight="6dip"
+			android:layout_marginTop="8dip"
 			android:lines="1"
-			android:text="99.999%"
-			android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+			android:text="56.2 KB / 126.6 KB"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
+	
+		<!-- File name -->
+		<TextView
+			android:id="@+id/transferFileName"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/transferSize"
+			android:layout_marginLeft="6dip"
+			android:layout_marginRight="6dip"
+			android:layout_marginTop="6dip"
+			android:layout_alignParentLeft="true"
+			android:lines="1"
+			android:text="File A"
+			android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+		<!-- Speed -->
+		<TextView
+			android:id="@+id/transferSpeed"
+			android:layout_width="75dip"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/transferFileName"
+			android:layout_alignRight="@+id/transferSize"
+			android:layout_marginTop="3dip"
+			android:layout_marginLeft="3dip"
+			android:gravity="right"
+			android:lines="1"
+			android:text="123.4 KB/s"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
+	
+		<!-- Progress indicator -->
+		<RelativeLayout	android:id="@+id/transferProgress"
+			android:layout_width="140dip"
+			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/transferSpeed"
+			android:layout_below="@+id/transferFileName"
+			android:layout_marginTop="3dip"
+			android:layout_centerHorizontal="true">
+			<ProgressBar
+				android:id="@+id/transferProgressRunning"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:progressDrawable="@drawable/progress_green"
+				android:visibility="invisible"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<ProgressBar
+				android:id="@+id/transferProgressSuspended"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:progressDrawable="@drawable/progress_red"
+				android:visibility="gone"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<ProgressBar
+				android:id="@+id/transferProgressWaiting"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:progressDrawable="@drawable/progress_yellow"
+				android:visibility="gone"
+				android:max="1000"
+				android:progress="10"
+				android:secondaryProgress="1000" />
+			<TextView
+				android:id="@+id/transferProgressText"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentTop="true"
+				android:layout_centerInParent="true"
+				android:lines="1"
+				android:text="99.999%"
+				android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+		</RelativeLayout>
+	
+		<!-- Elapsed time -->
+		<TextView
+			android:id="@+id/transferElapsed"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/transferProgress"
+			android:layout_alignTop="@+id/transferSpeed"
+			android:layout_marginRight="3dip"
+			android:layout_marginLeft="3dip"
+			android:gravity="right"
+			android:lines="1"
+			android:text="000:00:00"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
+	
+		<!-- Project name -->
+		<TextView
+			android:id="@+id/transferProjectName"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toLeftOf="@+id/transferElapsed"
+			android:layout_alignTop="@+id/transferElapsed"
+			android:layout_alignLeft="@+id/transferFileName"
+			android:gravity="left"
+			android:lines="1"
+			android:text="ProjectX@Home"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
 	</RelativeLayout>
-
-	<!-- Elapsed time -->
-	<TextView
-		android:id="@+id/transferElapsed"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_toLeftOf="@+id/transferProgress"
-		android:layout_alignTop="@+id/transferSpeed"
-		android:layout_marginRight="3dip"
-		android:layout_marginLeft="3dip"
-		android:gravity="right"
-		android:lines="1"
-		android:text="000:00:00"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
-
-	<!-- Project name -->
-	<TextView
-		android:id="@+id/transferProjectName"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_toLeftOf="@+id/transferElapsed"
-		android:layout_alignTop="@+id/transferElapsed"
-		android:layout_alignLeft="@+id/transferFileName"
-		android:gravity="left"
-		android:lines="1"
-		android:text="ProjectX@Home"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
-</RelativeLayout>
+</LinearLayout>
