--- a/src/NativeBOINC/res/layout/install_step2.xml
+++ b/src/NativeBOINC/res/layout/install_step2.xml
@@ -18,18 +18,37 @@
 		  		android:layout_height="wrap_content"
 		  		android:textSize="14dip"
 		  		android:text="@string/installSuccessfully" />
-		  	<TextView
+		    <TextView
 				android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
 		  		android:textSize="14dip"
 		  		android:paddingTop="10dip"
 		  		android:text="@string/installNetworkAccess1" />
-		  	<TextView
-				android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
-		  		android:paddingTop="10dip"
-		  		android:text="@string/installNetworkAccess2" />
+		    <TextView 
+	            android:layout_width="wrap_content"
+	  			android:layout_height="wrap_content"
+	  			android:textSize="14dip"
+	  			android:paddingTop="10dip"
+	  			android:paddingBottom="10dip"
+	  			android:text="@string/youCanChange" />
+		    <LinearLayout
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content" 
+		        android:orientation="horizontal">
+		        <Button android:id="@+id/changePassword"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/accessPassword" />
+		        <TextView 
+		            android:layout_width="wrap_content"
+		  			android:layout_height="wrap_content"
+		  			android:textSize="14dip"
+		  			android:text="@string/orText" />
+		        <Button android:id="@+id/changeHostname"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/hostname" /> 
+		    </LinearLayout>
 		  	<TextView
 				android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
