--- a/src/NativeBOINC/res/layout/tasks_list_item.xml
+++ b/src/NativeBOINC/res/layout/tasks_list_item.xml
@@ -26,6 +26,12 @@
 	android:layout_height="wrap_content"
 	android:minHeight="?android:attr/listPreferredItemHeight">
 
+    <CheckBox 
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
+		android:focusable="false" />
 	<!-- Task application name -->
 	<TextView
 		android:id="@+id/taskAppName"
@@ -35,6 +41,7 @@
 		android:layout_marginRight="6dip"
 		android:layout_marginTop="6dip"
 		android:lines="1"
+		android:layout_toRightOf="@+id/check"
 		android:text="Application A"
 		android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -128,7 +135,7 @@
 		android:layout_height="wrap_content"
 		android:layout_toLeftOf="@+id/taskProgress"
 		android:layout_below="@+id/taskProjectName"
-		android:layout_alignLeft="@+id/taskAppName"
+		android:layout_alignLeft="@+id/check"
 		android:layout_marginTop="3dip"
 		android:layout_marginRight="5dip"
 		android:gravity="right"
