--- a/src/NativeBOINC/res/layout/update.xml
+++ b/src/NativeBOINC/res/layout/update.xml
@@ -58,6 +58,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="10dip"
+			android:enabled="false"
 			android:paddingLeft="20dip"
 			android:paddingRight="20dip"
 			android:text="@string/ok" />
